Remove the custom font, it is creating some small alignment bugs...

--- a/docs/style.scss
+++ b/docs/style.scss
@@ -1,5 +1,3 @@
-$family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-
 @import "./../node_modules/bulma/sass/utilities/initial-variables";
 
 
